--- a/about.html
+++ b/about.html
@@ -22,6 +22,12 @@
         <a href="#menu">Menu</a>
     </header>
 
+     <!-- Language Switcher -->
+     <ul class="language-switch">
+        <li><a href="about.html">English</a></li>
+        <li><a href="about_es.html">Español</a></li>
+    </ul>
+    
     <!-- Navigation -->
     <nav id="menu">
         <ul class="links">
