--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,12 @@
         <a href="#menu">Menu</a>
     </header>
 
+     <!-- Language Switcher -->
+     <ul class="language-switch">
+        <li><a href="contact.html">English</a></li>
+        <li><a href="contant_es.html">Español</a></li>
+    </ul>
+
     <!-- Nav -->
     <nav id="menu">
         <ul class="links">
