--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 				<a href="#menu">Menu</a>
 			</header>
 
+			 <!-- Language Switcher -->
+			 <ul class="language-switch">
+				<li><a href="index.html">English</a></li>
+				<li><a href="index_es.html">Español</a></li>
+			</ul>
+
+
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
