--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,12 @@
         <a href="#menu">Menu</a>
     </header>
 
+     <!-- Language Switcher -->
+     <ul class="language-switch">
+        <li><a href="portfolio.html">English</a></li>
+        <li><a href="portfolio_es.html">Español</a></li>
+    </ul>
+
     <!-- Nav -->
     <nav id="menu">
         <ul class="links">
