--- a/services.html
+++ b/services.html
@@ -20,6 +20,12 @@
         <a href="#menu">Menu</a>
     </header>
 
+     <!-- Language Switcher -->
+     <ul class="language-switch">
+        <li><a href="services.html">English</a></li>
+        <li><a href="services_es.html">Español</a></li>
+    </ul>
+
     <!-- Nav -->
     <nav id="menu">
         <ul class="links">
