--- a/index_es.html
+++ b/index_es.html
@@ -8,26 +8,29 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
+
+    <!-- Header -->
     <header id="header" class="alt">
         <div class="logo"><a href="index_es.html">Dasta <span>Su Contratista de Confianza</span></a></div>
         <a href="#menu">Menú</a>
     </header>
+
+    <!-- Nav -->
     <nav id="menu">
         <ul class="links">
-            <li class="active"><a href="index_es.html">Inicio</a></li>
+            <li><a href="index_es.html">Inicio</a></li>
             <li><a href="services_es.html">Servicios</a></li>
             <li><a href="portfolio_es.html">Portafolio</a></li>
             <li><a href="about_es.html">Sobre Nosotros</a></li>
             <li><a href="contact_es.html">Contacto</a></li>
+            <li><a href="index.html">English</a></li>
         </ul>
     </nav>
-    <ul class="language-switch">
-        <li><a href="index.html">English</a></li>
-        <li><a href="index_es.html">Español</a></li>
-    </ul>
+
+    <!-- Slideshow -->
     <section class="banner full">
         <article>
-            <img src="DASTA CONTRACTING/newfrontofhouse.png" alt=""/>
+            <img src="DASTA CONTRACTING/newfrontofhouse.png" alt="" />
             <div class="inner">
                 <header>
                     <h2>Bienvenidos a Dasta - Su Contratista de Confianza</h2>
@@ -35,7 +38,7 @@
             </div>
         </article>
         <article>
-            <img src="DASTA CONTRACTING/NewInterior.jpeg" alt=""/>
+            <img src="DASTA CONTRACTING/NewInterior.jpeg" alt="" />
             <div class="inner">
                 <header>
                     <h2>Su Visión, Nuestra Misión</h2>
@@ -43,7 +46,7 @@
             </div>
         </article>
         <article>
-            <img src="DASTA CONTRACTING/newexterior.jpeg" alt=""/>
+            <img src="DASTA CONTRACTING/newexterior.jpeg" alt="" />
             <div class="inner">
                 <header>
                     <h2>Elevando Hogares Desde [Año]</h2>
@@ -51,7 +54,7 @@
             </div>
         </article>
         <article>
-            <img src="DASTA CONTRACTING/NEShed1.jpeg" alt=""/>
+            <img src="DASTA CONTRACTING/NEShed1.jpeg" alt="" />
             <div class="inner">
                 <header>
                     <h2>Mostrando Nuestro Trabajo</h2>
@@ -59,7 +62,7 @@
             </div>
         </article>
         <article>
-            <img src="DASTA CONTRACTING/NEmaindoor.jpeg" alt=""/>
+            <img src="DASTA CONTRACTING/NEmaindoor.jpeg" alt="" />
             <div class="inner">
                 <header>
                     <h2>Transformando Espacios Desde [Año]</h2>
@@ -67,15 +70,151 @@
             </div>
         </article>
     </section>
+
+    <!-- One -->
+    <section id="services" class="wrapper style2">
+        <div class="inner">
+            <div class="grid-style">
+
+                <div>
+                    <div class="box">
+                        <div class="image fit">
+                            <img src="DASTA CONTRACTING/newdeckside.jpeg" alt="Construcción de Terrazas" />
+                        </div>
+                        <div class="content">
+                            <header class="align-center">
+                                <p>Construcción Experta de Terrazas</p>
+                                <h2>Su Terraza Ideal, Construida para Durar</h2>
+                            </header>
+                            <p>Transforme su espacio exterior con el servicio personalizado de construcción de terrazas de Dasta. Utilizamos materiales de alta calidad y técnicas precisas para crear terrazas que no solo lucen increíbles, sino que también resisten el paso del tiempo.</p>
+                            <footer class="align-center">
+                                <a href="services_es.html" class="button alt">Saber Más</a>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="box">
+                        <div class="image fit">
+                            <img src="DASTA CONTRACTING/NEShed1.jpeg" alt="Construcción de Cercas" />
+                        </div>
+                        <div class="content">
+                            <header class="align-center">
+                                <p>Soluciones Personalizadas de Cercas</p>
+                                <h2>Privacidad y Belleza en Cada Diseño</h2>
+                            </header>
+                            <p>Mejore la seguridad y estética de su propiedad con los servicios de construcción de cercas de Dasta. Desde cercas de madera hasta diseños metálicos intrincados, nos aseguramos de que su cerca complemente su hogar y cumpla con su propósito.</p>
+                            <footer class="align-center">
+                                <a href="services_es.html" class="button alt">Saber Más</a>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="box">
+                        <div class="image fit">
+                            <img src="DASTA CONTRACTING/newshed.jpeg" alt="Construcción de Cobertizos" />
+                        </div>
+                        <div class="content">
+                            <header class="align-center">
+                                <p>Construcción Experta de Cobertizos</p>
+                                <h2>Espacios Funcionales a Medida</h2>
+                            </header>
+                            <p>¿Busca espacio adicional de almacenamiento o trabajo? Dasta puede crear cobertizos personalizados que se adapten a sus necesidades específicas, desde simples almacenes hasta avanzados espacios de trabajo, con la calidad y durabilidad que puede confiar.</p>
+                            <footer class="align-center">
+                                <a href="services_es.html" class="button alt">Saber Más</a>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="box">
+                        <div class="image fit">
+                            <img src="DASTA CONTRACTING/newexteriorback.jpeg" alt="Soluciones de Techos" />
+                        </div>
+                        <div class="content">
+                            <header class="align-center">
+                                <p>Techos de Alta Calidad</p>
+                                <h2>Protección y Valor, Ante Todo</h2>
+                            </header>
+                            <p>Su techo es la primera línea de defensa de su hogar contra los elementos. En Dasta, ofrecemos soluciones de techos de primera categoría que ofrecen durabilidad y atractivo visual, asegurando que su hogar esté bien protegido y se vea genial.</p>
+                            <footer class="align-center">
+                                <a href="services_es.html" class="button alt">Saber Más</a>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Two -->
+    <section id="two" class="wrapper style3">
+        <div class="inner">
+            <header class="align-center">
+                <p>Convirtiendo Tus Ideas en Realidad</p>
+                <h2>Elevando Hogares y Estilos de Vida</h2>
+            </header>
+        </div>
+    </section>
+
+    <!-- Three -->
+    <section id="three" class="wrapper style2">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special">Explora Nuestro Trabajo</p>
+                <h2>Mostrando Nuestro Trabajo</h2>
+            </header>
+            <div class="gallery">
+                <div>
+                    <div class="image fit">
+                        <a href="#"><img src="DASTA CONTRACTING/NiceExterior.jpeg" alt="" /></a>
+                    </div>
+                </div>
+                <div>
+                    <div class="image fit">
+                        <a href="#"><img src="DASTA CONTRACTING/olddeck.jpeg" alt="" /></a>
+                    </div>
+                </div>
+                <div>
+                    <div class="image fit">
+                        <a href="#"><img src="DASTA CONTRACTING/InteriorRenovation1.jpeg" alt="" /></a>
+                    </div>
+                </div>
+                <div>
+                    <div class="image fit">
+                        <a href="#"><img src="DASTA CONTRACTING/Oldfrontofhouse.jpeg" alt="" /></a>
+                    </div>
+                </div>
+            </div>
+            <footer class="align-center">
+                <a href="portfolio_es.html" class="button alt">Ver Más Proyectos</a>
+            </footer>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer id="footer">
         <div class="container">
             <ul class="icons">
                 <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Correo</span></a></li>
+                <li><a href="#" class="icon fa-envelope-o"><span class="label">Correo Electrónico</span></a></li>
             </ul>
         </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 </html>
