--- a/contant_es.html
+++ b/contant_es.html
@@ -10,10 +10,13 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+    <!-- Header -->
     <header id="header" class="alt">
         <div class="logo"><a href="index_es.html">Dasta <span>Su Contratista de Confianza</span></a></div>
         <a href="#menu">Menú</a>
     </header>
+
+    <!-- Nav -->
     <nav id="menu">
         <ul class="links">
             <li><a href="index_es.html">Inicio</a></li>
@@ -23,10 +26,8 @@
             <li><a href="contact_es.html">Contacto</a></li>
         </ul>
     </nav>
-    <ul class="language-switch">
-        <li><a href="contact.html">English</a></li>
-        <li><a href="contact_es.html">Español</a></li>
-    </ul>
+
+    <!-- Main -->
     <section id="contact" class="wrapper style2">
         <div class="inner">
             <header class="align-center">
@@ -37,10 +38,10 @@
                 <form method="post" action="contact_form.php">
                     <div class="row uniform">
                         <div class="6u 12u$(xsmall)">
-                            <input type="text" name="name" id="name" placeholder="Nombre" required />
+                            <input type="text" name="name" id="name" value="" placeholder="Nombre" required />
                         </div>
                         <div class="6u$ 12u$(xsmall)">
-                            <input type="email" name="email" id="email" placeholder="Correo Electrónico" required />
+                            <input type="email" name="email" id="email" value="" placeholder="Correo Electrónico" required />
                         </div>
                         <div class="12u$">
                             <textarea name="message" id="message" placeholder="Ingresa tu mensaje" rows="6" required></textarea>
@@ -56,128 +57,49 @@
             </div>
         </div>
     </section>
-    <footer id="footer">
-        <div class="container">
-            <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Correo</span></a></li>
-            </ul>
-        </div>
-    </footer>
-</body>
-</html>
-<!DOCTYPE HTML>
-<html lang="es">
-<head>
-    <title>Dasta - Servicios</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="services.css" />
-</head>
-<body>
-    <header id="header" class="alt">
-        <div class="logo"><a href="index_es.html">Dasta <span>Su Contratista de Confianza</span></a></div>
-        <a href="#menu">Menú</a>
-    </header>
-    <nav id="menu">
-        <ul class="links">
-            <li><a href="index_es.html">Inicio</a></li>
-            <li class="active"><a href="services_es.html">Servicios</a></li>
-            <li><a href="portfolio_es.html">Portafolio</a></li>
-            <li><a href="about_es.html">Sobre Nosotros</a></li>
-            <li><a href="contact_es.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <ul class="language-switch">
-        <li><a href="services.html">English</a></li>
-        <li><a href="services_es.html">Español</a></li>
-    </ul>
-    <section id="services" class="wrapper style2">
+
+    <!-- Testimonials -->
+    <section id="testimonials" class="wrapper style2">
         <div class="inner">
-            <div class="box service-box">
-                <div class="serviceimage">
-                    <div class="deckimage"><img src="DASTA CONTRACTING/deckstairs2.jpeg" alt=""/></div>
-                    <div class="deckimage"><img src="DASTA CONTRACTING/newdeckside.jpeg" alt=""/></div>
-                </div>
-                <div class="content">
-                    <header class="align-center">
-                        <h2>Terrazas</h2>
-                    </header>
-                    <p>En Dasta, nos especializamos en la creación de terrazas personalizadas que no solo amplían su espacio habitable, sino que también mejoran el atractivo estético de su hogar. Nuestra mano de obra experta asegura que cada terraza se construya a la perfección.</p>
-                    <p class="testimonial">"¡El mejor servicio de terrazas!" - [Nombre del Cliente]</p>
-                    <footer class="align-center">
-                        <a href="#" class="button alt">Solicitar Cotización</a>
-                    </footer>
-                </div>
-            </div>
-
-            <!-- Interior Renovation Section -->
-            <div class="box service-box">
-                <div class="serviceimage">
-                    <div class="fence-image"><img src="DASTA CONTRACTING/InteriorRenovation1.jpeg" alt=""/></div>
-                    <div class="fence-image"><img src="DASTA CONTRACTING/NewInterior.jpeg" alt=""/></div>
-                </div>
-                <div class="content">
-                    <header class="align-center">
-                        <h2>Renovación Interior</h2>
-                    </header>
-                    <p>Transforme su hogar con nuestros servicios de renovación interior. En Dasta, comprendemos la importancia de un espacio de vida bien diseñado y funcional.</p>
-                    <p class="testimonial">"¡Excelente mano de obra!" - [Nombre del Cliente]</p>
-                    <footer class="align-center">
-                        <a href="#" class="button alt">Solicitar Cotización</a>
-                    </footer>
-                </div>
-            </div>
-
-            <!-- Sheds Section -->
-            <div class="box service-box">
-                <div class="serviceimage">
-                    <div class="shedimage"><img src="DASTA CONTRACTING/NEShed1.jpeg" alt=""/></div>
-                    <div class="shedimage"><img src="DASTA CONTRACTING/newshed.jpeg" alt=""/></div>
-                </div>
-                <div class="content">
-                    <header class="align-center">
-                        <h2>Cobertizos</h2>
-                    </header>
-                    <p>¿Necesita más espacio? Nuestros cobertizos personalizados están diseñados para brindarle el espacio de almacenamiento adicional que necesita.</p>
-                    <p class="testimonial">"¡Solucionaron todos mis problemas de almacenamiento!" - [Nombre del Cliente]</p>
-                    <footer class="align-center">
-                        <a href="#" class="button alt">Solicitar Cotización</a>
-                    </footer>
-                </div>
-            </div>
-
-            <!-- Exterior Renovation Section -->
-            <div class="box service-box">
-                <div class="serviceimage">
-                    <div class="roofingimage"><img src="DASTA CONTRACTING/NiceExterior.jpeg" alt=""/></div>
-                    <div class="roofingimage"><img src="DASTA CONTRACTING/newexteriorback.jpeg" alt=""/></div>
-                </div>
-                <div class="content">
-                    <header class="align-center">
-                        <h2>Renovación Exterior</h2>
-                    </header>
-                    <p>Mejore el atractivo de su hogar con nuestros servicios integrales de renovación exterior. Ofrecemos una gama de servicios que incluyen techos, revestimientos y pintura exterior.</p>
-                    <p class="testimonial">"¡Servicio rápido y confiable!" - [Nombre del Cliente]</p>
-                    <footer class="align-center">
-                        <a href="#" class="button alt">Solicitar Cotización</a>
-                    </footer>
-                </div>
+            <header class="align-center">
+                <h2>Lo que Dicen Nuestros Clientes</h2>
+                <p>Escucha a nuestros clientes satisfechos.</p>
+            </header>
+            <div class="content">
+                <blockquote>
+                    "Dasta proporcionó un servicio excepcional y un trabajo de calidad. ¡Altamente recomendado!" - John Doe
+                </blockquote>
+                <blockquote>
+                    "Profesional, confiable, y superó nuestras expectativas. ¡Gracias, Dasta!" - Jane Smith
+                </blockquote>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer id="footer">
         <div class="container">
             <ul class="icons">
                 <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Correo</span></a></li>
+                <li><a href="#" class="icon fa-envelope-o"><span class="label">Correo Electrónico</span></a></li>
             </ul>
         </div>
     </footer>
+
+    <div class="copyright">
+        &copy; <span id="year"></span> Dasta. Todos los derechos reservados.
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
