--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
     <title>Dasta - Contact Us</title>
     <meta charset="utf-8" />
@@ -35,13 +35,14 @@
                 <p>We are here to assist you with your construction needs. Your satisfaction is our priority.</p>
             </header>
             <div class="content">
-                <form method="post" action="contact_form.php">
+                <!-- Contact Form with Formspree -->
+                <form method="POST" action="https://formspree.io/f/meoqoggk">
                     <div class="row uniform">
                         <div class="6u 12u$(xsmall)">
-                            <input type="text" name="name" id="name" value="" placeholder="Name" required />
+                            <input type="text" name="name" id="name" placeholder="Name" required />
                         </div>
                         <div class="6u$ 12u$(xsmall)">
-                            <input type="email" name="email" id="email" value="" placeholder="Email" required />
+                            <input type="email" name="email" id="email" placeholder="Email" required />
                         </div>
                         <div class="12u$">
                             <textarea name="message" id="message" placeholder="Enter your message" rows="6" required></textarea>
